# FactAstra

./: .gitignore  CMakeLists.txt  LICENSE  README.md  help.md  licenses.txt  lua-control.md  lua-mod-structure.md  lua-prototype-classes.md  lua-prototypes.md
data/core/: info.json  prototypes.lua
data/core/prototypes/: controller.lua
extlibs/Spectre2D/: License.txt
extlibs/Spectre2D/include/Spectre2D/: Cursor.h  Drawable.h  FileSystem.h  Graphics.hpp  Image.h  Joystick.h  LockableObject.h  Math.hpp  Mesh.h  Monitor.h  ObjectWithBuffer.h  RenderTarget.h  RenderTexture.h  RenderWindow.h  ResizableObject.h  Shader.h  Shape.h  String.h  System.hpp  Transformable.h  VertexData.h  Window.h  core.h  events.h  internal.h  keycodes.h  math3d.h
extlibs/bzip2/: License.txt
extlibs/bzip2/Win32/Debug/: bzip2.lib
extlibs/glfw3/Win32/Debug/: glfw3.lib
extlibs/liblzma/: Notice.txt
extlibs/liblzma/Win32/Debug/: liblzma.lib
extlibs/libminizip/Win32/Debug/: libminizip.lib
extlibs/lua/Win32/Debug/: lua.lib
extlibs/zlibstaticd/: License.txt
extlibs/zlibstaticd/Win32/Debug/: zlibstaticd.lib
extlibs/zstd_static/Win32/Debug/: zstd_static.lib
source/: App.cpp  App.hpp  LuaControllerPrototype.cpp  LuaControllerPrototype.hpp  LuaObject.cpp  LuaObject.hpp  LuaPrototype.cpp  LuaPrototype.hpp  LuaStateManager.cpp  LuaStateManager.hpp  LuaStorage.cpp  LuaStorage.hpp  ModManager.cpp  ModManager.hpp  Version.cpp  Version.hpp  errors.hpp  json.cpp  json.hpp  main.cpp  util.cpp  util.hpp
